<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <POU Name="FB_DiagnosisEtherCAT" Id="{4d69465a-f2cd-4c79-b6d9-39d89729a3d3}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_DiagnosisEtherCAT
VAR
	uiDevState 			AT%I*	:UINT;
	uiFrmState 			AT%I*	:ARRAY[0..uiMaxFrmNumber] OF UINT;
	uiFrmWcState 		AT%I*	:ARRAY[0..uiMaxFrmNumber] OF UINT;
	uiSlaveCount 		AT%I*	:UINT;
	uiCfgSlaveCount 	AT%I*	:UINT;

	sDevStateStatus				:STRING(255);	
	sFrmStateStatus				:STRING(255);
	sFrmWcStateStatus			:STRING(255);
END_VAR
VAR CONSTANT
	uiMaxFrmNumber				:UINT :=2 ;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="DevState_Diagnosis" Id="{ba29eb12-5898-4f7d-a615-582491811c62}">
      <Declaration><![CDATA[METHOD DevState_Diagnosis : BOOL
VAR_INPUT
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[//デバイスの状態チェック、エラーは複数発生する可能性があるので全bitチェック
IF uiDevState.0 THEN
	sDevStateStatus:= 'Link error. ';
ELSE
	sDevStateStatus:= '';
END_IF
IF uiDevState.1 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'I/O locked after link error (I/O reset required). ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF
IF uiDevState.2 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'Link error (redundancy adapter). ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF
IF uiDevState.3 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'Missing one frame (redundancy mode). ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF
IF uiDevState.4 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'Out of send resources (I/O reset required). ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF
IF uiDevState.5 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'Watchdog triggered. ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF
IF uiDevState.6 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'Ethernet driver (miniport not found). ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF
IF uiDevState.7 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'I/O reset active. ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF
IF uiDevState.8 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'At least one device in INIT state. ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF
IF uiDevState.9 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'At least one device in PRE-OP state. ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF
IF uiDevState.10 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'At least one device in SAFE-OP state. ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF
IF uiDevState.11 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'At least on device indicates an error state. ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF
IF uiDevState.12 THEN
	sDevStateStatus:= CONCAT( sDevStateStatus, 'DC not in sync. ');
ELSE
	sDevStateStatus:= CONCAT( sDevStateStatus, '');
END_IF


IF sDevStateStatus= '' THEN
	DevState_Diagnosis:= TRUE;
ELSE
	DevState_Diagnosis:= FALSE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="FrmState_Diagnosis" Id="{9a8e8c7e-cd4e-419b-9a1d-7c35b62fac31}">
      <Declaration><![CDATA[METHOD FrmState_Diagnosis : BOOL
VAR_INPUT
	iFrmNumber		:INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[//フレームの状態チェック、エラーは複数発生する可能性があるので全bitチェック
IF (uiFrmState[iFrmNumber] < 32768 AND uiFrmState[iFrmNumber] <>0) OR uiFrmState[iFrmNumber] > 32768 THEN

	IF uiFrmState[iFrmNumber].0 THEN
		sFrmStateStatus:= '1. ';
	ELSE
		sFrmStateStatus:= '';
	END_IF
	IF uiFrmState[iFrmNumber].1 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '2. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].2 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '3. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].3 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '4. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].4 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '5. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].5 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '6. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].6 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '7. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].7 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '8. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].8 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '9. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].9 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '10. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].10 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '11. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].11 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '12. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].12 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '13. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].13 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '14. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF
	IF uiFrmState[iFrmNumber].14 THEN
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '15. ');
	ELSE
		sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
	END_IF

	sFrmStateStatus:=CONCAT(sFrmStateStatus, 'EtherCAT command not sent (NOP requested). ');

ELSIF uiFrmState[iFrmNumber]= 0 THEN
	sFrmStateStatus:= '';
END_IF

IF uiFrmState[iFrmNumber].15 THEN
	sFrmStateStatus:=  'Complete frame not sent. ';
ELSE
	sFrmStateStatus:= CONCAT( sFrmStateStatus, '');
END_IF


IF sFrmStateStatus= '' THEN
	FrmState_Diagnosis:= TRUE;
ELSE
	FrmState_Diagnosis:= FALSE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="FrmWcState_Diagnosis" Id="{2dd1d68f-eb06-4a94-a668-80611ad4df78}">
      <Declaration><![CDATA[METHOD FrmWcState_Diagnosis : BOOL
VAR_INPUT
	iFrmNumber		:INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[//サイクリックフレームごとのワーキングカウンターチェック、エラーは複数発生する可能性があるので全bitチェック
IF (uiFrmWcState[iFrmNumber] < 32768 AND uiFrmWcState[iFrmNumber]<>0) OR uiFrmWcState[iFrmNumber]>32768  THEN
	sFrmWcStateStatus:= 'Wrong working counter of ';

	IF uiFrmWcState[iFrmNumber].0 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '1. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].1 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '2. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].2 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '3. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].3 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '4. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].4 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '5. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].5 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '6. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].6 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '7. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].7 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '8. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].8 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '9. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].9 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '10. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].10 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '11. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].11 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '12. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].12 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '13. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].13 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '14. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF
	IF uiFrmWcState[iFrmNumber].14 THEN
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '15. ');
	ELSE
		sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
	END_IF

	sFrmWcStateStatus:= CONCAT(sFrmWcStateStatus, 'EtherCAT command received. ' );

ELSIF uiFrmWcState[iFrmNumber]= 0 THEN
	sFrmWcStateStatus:= '';
END_IF

IF uiFrmWcState[iFrmNumber].15 THEN
	sFrmWcStateStatus:=  'Complete frame missing! ';
ELSE
	sFrmWcStateStatus:= CONCAT( sFrmWcStateStatus, '');
END_IF


IF sFrmWcStateStatus= '' THEN
	FrmWcState_Diagnosis:= TRUE;
ELSE
	FrmWcState_Diagnosis:= FALSE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="SlaveCount_Diagnosis" Id="{fe452df9-cf7a-4fa3-bd7c-baf094b8b75e}">
      <Declaration><![CDATA[METHOD SlaveCount_Diagnosis : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF uiSlaveCount=uiCfgSlaveCount AND uiSlaveCount<>0 AND uiCfgSlaveCount<>0 THEN
	SlaveCount_Diagnosis:=TRUE;
ELSE
	SlaveCount_Diagnosis:=FALSE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_DiagnosisEtherCAT">
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="FB_DiagnosisEtherCAT.DevState_Diagnosis">
      <LineId Id="1" Count="72" />
    </LineIds>
    <LineIds Name="FB_DiagnosisEtherCAT.FrmState_Diagnosis">
      <LineId Id="1" Count="96" />
    </LineIds>
    <LineIds Name="FB_DiagnosisEtherCAT.FrmWcState_Diagnosis">
      <LineId Id="1" Count="97" />
    </LineIds>
    <LineIds Name="FB_DiagnosisEtherCAT.SlaveCount_Diagnosis">
      <LineId Id="1" Count="4" />
    </LineIds>
  </POU>
</TcPlcObject>